entry-service/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: entry-service
spec:
  replicas: 1
  template: 
    metadata:
      labels: 
        app: entry-service
    spec:
      containers:
      - name: entry-service
        image: franpog859/entry-service:v0.2
        ports:
        - containerPort: 8000
