entry-service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress
spec:
  backend:
    serviceName: entry-service
    servicePort: 8000
